<resources>
    <string name="app_name">GSTestExample</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="clear_input">Clear input</string>
    <string name="clear_urls">Clear urls</string>
    <string name="url">URL</string>
    <string name="http_video11_qtv_com_cn_qtv1_sd_manifest_m3u8">http://vd3.bdstatic.com/mda-igvnzpvagkhmfugr/mda-igvnzpvagkhmfugr.mp4</string>
    <string name="testText">%1$s\n %2$s</string>
    <string name="size">200dp</string>
    <string name="str_test">全部回复(%1$s)</string>
    <string name="testKongge">娃&#160;&#160;&#160;&#160;&#160;哈&#160;&#160;&#160;&#160;&#160;哈</string>
    <string name="actionBarSize">40dip</string>
    <string name="ellipsis">......</string>
    <string name="wait_dialog_title">请稍候 &#8230;</string>
    <string name="subtitle">你画我跑</string>
    <string name="you_paint_me_running">你画我跑</string>
    <string name="information_display">信息显示界面</string>
    <string name="remote_control">极品飞车</string>
    <string name="infrared_remote_control">红外遥控</string>
    <string name="ultrasonic_obstacle_avoidance_mode">超声波避障模式</string>
    <string name="obstacle_avoidance_mode">避障模式</string>
    <string name="ps2_remote_control">ps2遥控</string>
    <string name="infrared_tracing">红外寻迹</string>
    <string name="the_2.4G_control">2.4G 遥控</string>
    <string name="music_mode">触摸钢琴</string>
    <string name="hummer_bot">悍马</string>
    <string name="aurora_racing">Aurora-racing</string>
    <string name="balance_car">Balance-car</string>
    <string name="panther_tank">Panther-tank</string>
    <string name="beetle">Beetle-bot</string>
    <string name="e_bot">Happy-bot</string>
    <string name="mirage">幻影</string>
    <string name="balanced_pid_adjustment">平衡PID</string>
    <string name="speed_pid_adjustment">速度PID</string>
    <string name="rotary_pid_adjustment">旋转PID</string>
    <string name="send">发送</string>
    <string name="slow_down">slow down</string>
    <string name="speed_up">speed up</string>
    <string name="current_speed_default">current speed:default</string>
    <string name="received">received:</string>
    <string name="send_Mainble">send:</string>
    <string name="gravity_sensing_switch">重力感应</string>
    <string name="Current_tracing_state">当前寻迹状态：</string>
    <string name="Current_detection_distance">当前探测距离：</string>
    <string name="Current_feedback_value">当前反馈数值：</string>
    <string name="Current_light_value">当前光敏数值：</string>
    <string name="stopped">stopped</string>
    <string name="turn_right">turn right</string>
    <string name="turn_left">turn left</string>
    <string name="go_backward">go backward</string>
    <string name="go_forward">go forward</string>
    <string name="prompt">提示</string>
    <string name="Prompt_content">目前该功能暂未实现，敬请期待后续开发！</string>
    <string name="determine">确定</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c1">C#</string>
    <string name="title_activity_balance_drive_control">BalanceDriveControlActivity</string>
    <string name="ultrasonic_distance">当前距离为：</string>
    <string name="left_motor_PWM">左电机PWM</string>
    <string name="right_motor_PWM">右电机PWM</string>
    <string name="inclination">倾角：</string>
    <string name="temperature">温度：</string>
    <string name="ultrasonic_distance_init">当前距离为：  CM</string>
    <string name="inclination_init"> °</string>
    <string name="temperature_init"> °C</string>
    <string name="menu_switch">声音:</string>
    <string name="scanned_succeed">扫描结束!</string>
    <string name="scanned_fail">扫描结果为空！请重新扫描!</string>
    <string name="connection_timed_out">蓝牙连接超时，请重新连接</string>
    <string name="connection_failed">连接失败</string>
    <string name="connection_succeed">连接成功!</string>
    <string name="Disconnect">断开连接</string>
    <string name="gz">GZ:</string>
    <string name="gy">GY:</string>
    <string name="gx">GX:</string>
    <string name="az">AZ:</string>
    <string name="ay">AY:</string>
    <string name="ax">AX:</string>
    <string name="todo">TODO</string>
    <string name="setting">设置</string>
    <string name="help">帮助</string>
    <string name="related_information">相关信息</string>
    <string name="update">软件更新</string>
    <string name="qr_code_download">二维码下载</string>
    <string name="scan_download">扫描下载</string>
    <string name="Language_switching">语言切换</string>
    <string name="application_related">应用相关</string>
    <string name="use_tutorial">使用教程</string>
    <string name="Help_the_community">帮助社区</string>
    <string name="q_a">Q&amp;A</string>
    <string name="download">直接下载</string>
    <drawable name="clr_normal">#263238</drawable>
    <drawable name="clr_pressed">#00BAED</drawable>
    <drawable name="clr_normal1">#161e21</drawable>
    <drawable name="clr_pressed1">#00BAED</drawable>
    <string name="prompt_title">提示</string>
    <string name="prompt_content">该功能暂未完善，请期待后续</string>
    <string name="prompt_content1">因为中断的不稳定性，如果需要使用此功能，请单独烧录红外控制的程序操控</string>
    <string name="prompt_content2">因为中断的不稳定性，如果需要使用此功能，请单独烧录避障控制的程序操控</string>
    <string name="prompt_determination">确定</string>
    <string name="cancel">取消</string>
    <string name="app_copyright_statement">Shenzhen emakefun Co.,Ltd.All rights reserved.</string>
    <string name="version_number">V3.2.20181201</string>
    <string name="product_information">产品信息</string>
    <string name="amazon_link">亚马逊购买链接</string>
    <string name="aliExpress_link">速卖通购买链接</string>
    <string name="youtube_link">youtube视频链接</string>
    <string name="github_link">github下载链接</string>
    <string name="app_crash">拒绝后将无法自动发送app crash</string>
    <string name="language_selection">请选择所需语言</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="traditional_chinese">繁体中文</string>
    <string name="english">英文</string>
    <string name="app_name_wrong">应用名称不匹配，请下载正确的应用程序</string>
    <string name="app_version_more_than">版本信息大于最新版本，请下载正确的应用程序</string>
    <string name="new_version">当前app已是最新版本</string>
    <string name="old_version">当前app不是最新版本，需要更新</string>
    <string name="update_prompt">该应用不是最新版本，是否更新？</string>
    <string name="detection_version">正在检测版本</string>
    <string name="detection">检查中…</string>
    <string name="no_network">无网络，无法检测版本更新</string>
    <string name="drop_out">再按一次退出程序</string>
    <string name="installation_permission">安装权限需要打开允许来自此来源，请去设置中开启此权限</string>
    <string name="installation_permission_remind">请允许此权限或者自己手动打开再更新应用</string>
    <string name="background_download">后台下载开始</string>
    <string name="download_completed">下载完成</string>
    <string name="download_failure">下载失败,请重新下载</string>
    <string name="mp5_error">文件解码数值不匹配，请下载正确app</string>
    <string name="app_size_error">下载文件大小不完整，请重新下载</string>
    <string name="mode_switching">模式切换</string>
    <string name="aa">结果</string>
    <string name="zz">开始录音</string>
    <string name="aaq">取消</string>
    <string name="qqa">确定</string>
    <string name="voice_mode">语音AI</string>
    <string name="cmd_mode">创作模式</string>
    <string name="rgb_mode">酷炫灯光</string>
    <string name="rgbcolor">color :</string>
    <string name="rcolor">R :</string>
    <string name="gcolor">G :</string>
    <string name="bcolor">B :</string>
    <string name="red">红色</string>
    <string name="yellow">黄色</string>
    <string name="orange">橙色</string>
    <string name="green">绿色</string>
    <string name="blue">蓝色</string>
    <string name="purple">紫色</string>
    <string name="indigo">青色</string>
    <string name="start_identifying">按住说话</string>
    <string name="battery">battery:</string>
    <string name="clipboard">网址已保存于粘贴板</string>
    <string name="disconnect">OFF:</string>
    <string name="connect">ON:</string>
    <string name="device_introduction">器件介绍</string>
    <string name="function_promotion">功能宣传</string>
    <string name="assembling_video">组装视频</string>
    <string name="url_choose">请选择所需链接</string>
    <string name="url_choose1">请选择所需复制的链接</string>
    <string name="parse_result">解析结果:</string>
    <string name="parse_process">历史记录:</string>
    <string name="parse_error">解析错误,原因是:</string>
    <string name="speak">请讲话</string>
    <string name="speaking">讲话中…</string>
    <string name="parse_over">语音识别结束</string>
    <string name="parseing">识别中</string>
    <string name="parseing_over">识别结束</string>
    <string name="birthday_song">生日快乐</string>
    <string name="castle_in_the_sky">天空之城</string>
    <string name="update_switch">自动更新开关</string>
    <string name="display_matrix">表情显示</string>
    <string name="effect">音效列表</string>
    <string name="ClearData">清零</string>
    <string name="about_app">关于应用</string>
    <string name="light_tracking">寻光追踪</string>
    <string name="menu">菜单</string>
    <string name="songlist">歌曲列表</string>
    <string name="touch_piano">触屏钢琴</string>
    <string name="three_dimensiona_lnicam">3D丽音</string>
    <string name="three_dimensiona_rotate">3D旋转</string>
    <string name="pure_life">纯净人生</string>
    <string name="super_bass">超重低音</string>
    <string name="hifi_scene">HiFi现场</string>
    <string name="virtual_environment">虚拟环境</string>
    <string name="connection">连接</string>
    <string name="disconnection">断开</string>
    <string name="buttonPushed">钮推</string>
    <string name="mode1">模式一</string>
    <string name="mode2">模式2</string>
    <string name="mode3">模式3</string>
    <string name="surprise">惊喜</string>
    <string name="OhOoh">哈哈</string>
    <string name="OhOoh2">哈哈2</string>
    <string name="cuddly">可爱</string>
    <string name="sleeping">睡眠</string>
    <string name="happy">开心</string>
    <string name="superHappy">超级开心</string>
    <string name="happy_short">快乐短片</string>
    <string name="sad">忧伤</string>
    <string name="confused">困惑</string>
    <string name="fart1">声音一</string>
    <string name="fart2">声音二</string>
    <string name="fart3">声音三</string>
    <string name="didi">滴滴</string>
    <string name="little_star">小星星</string>
    <string name="ode_to_joy">欢乐颂</string>
    <string name="r">R</string>
    <string name="no_permission">没有权限</string>
    <string name="save">保存</string>
    <string name="speed_down">减速</string>
    <string name="right_automatic_rotation">右旋转</string>
    <string name="left_automatic_rotation">左旋转</string>
    <string name="left_stick">左摇杆</string>
    <string name="right_stick">右摇杆</string>
</resources>
